--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+PORT=##############
 REMOTE_DB_URL=##########
 REMOTE_DB_USERNAME=###########
 REMOTE_DB_PASSWORD=###########
+LOCAL_DB_URL=mongodb://localhost:27017/e-commerce
+SECRETORKEY=#############
